@@ -26,6 +26,7 @@ Date: ???
     - Move Nitinol smelting up a tier
     - Hide extra power entities
     - Added Ore sorting facility 5
+    - Buffed recipes for Silicon arbide, Silicon nitride, Tungsten carbide plate, Copper-tungsten plate
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed localised name of Mad Clown's Ore crystallization recipes
